# pravah

./: .gitignore  README.md  app.py  dockerfile  main.py  pyproject.toml  requirements.text  requirements.txt
pages/: doc_management.py  web_search.py
pravah/: llm.py  prompts.py  regax_pattern.py  retrieval.py  search.py
temp/: litellm_proxy.yaml  litellm_proxy_2.yaml  temp.py
